--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cros": "^1.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0",
     "nodemon": "^2.0.15"
   }
